Fix collapse menu hover behindness

--- a/src/SideMenu/styles.module.css
+++ b/src/SideMenu/styles.module.css
@@ -6,6 +6,7 @@
 
 .collapsed {
     width: 80px;
+    z-index: 1000;
 }
 
 .header {
